Fixed table overflow in testbed.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -45,6 +45,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 10px;
+    overflow-x: auto;
 
     .element-list {
         display: flex;
